--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blues-stack-template",
+  "name": "@interopdata/remix-demo",
   "private": true,
   "sideEffects": false,
   "scripts": {
@@ -43,7 +43,9 @@
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
+    "csv-stringify": "^6.3.4",
     "express": "^4.18.2",
+    "interopdata": "0.0.13-alpha",
     "isbot": "^3.6.8",
     "morgan": "^1.10.0",
     "prom-client": "^14.2.0",
